; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_disk_create_notify.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_disk.c_disk_create_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.fileinfo* }
%struct.fileinfo = type { i32, i32 }

@STATUS_PENDING = common dso_local global i64 0, align 8
@STATUS_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @disk_create_notify(%struct.TYPE_4__* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.fileinfo*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i64, i64* @STATUS_PENDING, align 8
  store i64 %10, i64* %9, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.fileinfo*, %struct.fileinfo** %12, align 8
  %14 = load i64, i64* %6, align 8
  %15 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %13, i64 %14
  store %struct.fileinfo* %15, %struct.fileinfo** %8, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.fileinfo*, %struct.fileinfo** %8, align 8
  %18 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load %struct.fileinfo*, %struct.fileinfo** %8, align 8
  %23 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %22, i32 0, i32 1
  %24 = call i64 @NotifyInfo(%struct.TYPE_4__* %19, i64 %20, i32 %21, i32* %23)
  store i64 %24, i64* %9, align 8
  %25 = load i32, i32* %7, align 4
  %26 = and i32 %25, 4096
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %3
  %29 = load i64, i64* %9, align 8
  %30 = load i64, i64* @STATUS_PENDING, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = load i64, i64* @STATUS_SUCCESS, align 8
  store i64 %33, i64* %4, align 8
  br label %37

34:                                               ; preds = %28
  br label %35

35:                                               ; preds = %34, %3
  %36 = load i64, i64* %9, align 8
  store i64 %36, i64* %4, align 8
  br label %37

37:                                               ; preds = %35, %32
  %38 = load i64, i64* %4, align 8
  ret i64 %38
}

declare dso_local i64 @NotifyInfo(%struct.TYPE_4__*, i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
